[gd_scene load_steps=16 format=2]

[ext_resource path="res://Assets/GFX/frames/weapon_knife.png" type="Texture" id=1]
[ext_resource path="res://Assets/GFX/frames/ice_zombie_idle_anim_f0.png" type="Texture" id=2]
[ext_resource path="res://Player/Enemy1.gd" type="Script" id=3]
[ext_resource path="res://Assets/GFX/frames/ice_zombie_run_anim_f1.png" type="Texture" id=4]
[ext_resource path="res://Assets/GFX/frames/ice_zombie_run_anim_f0.png" type="Texture" id=5]
[ext_resource path="res://Assets/GFX/frames/ice_zombie_run_anim_f3.png" type="Texture" id=6]
[ext_resource path="res://Assets/GFX/frames/ice_zombie_idle_anim_f1.png" type="Texture" id=7]
[ext_resource path="res://Assets/GFX/frames/ice_zombie_idle_anim_f2.png" type="Texture" id=8]
[ext_resource path="res://Assets/GFX/frames/ice_zombie_idle_anim_f3.png" type="Texture" id=9]
[ext_resource path="res://Assets/GFX/frames/ice_zombie_run_anim_f2.png" type="Texture" id=10]
[ext_resource path="res://Assets/SFX/Hurting The Robot.wav" type="AudioStream" id=11]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 4 ), ExtResource( 10 ), ExtResource( 6 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5, 7 )

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -120.0, -300.0, -900.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.01, 0.01 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "die"
} ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 3, 5 )

[node name="Enemy1" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 19
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
z_index = 1
frames = SubResource( 1 )
animation = "idle"
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Death = SubResource( 3 )

[node name="MoveTimer" type="Timer" parent="."]
autostart = true

[node name="EnemyWeapon" type="Area2D" parent="."]
position = Vector2( 9, 0 )
rotation = 1.5708
scale = Vector2( 0.8, 0.8 )
z_index = 1
collision_layer = 16

[node name="Sprite" type="Sprite" parent="EnemyWeapon"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyWeapon"]
shape = SubResource( 4 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 11 )
[connection signal="timeout" from="MoveTimer" to="." method="_on_MoveTimer_timeout"]
[connection signal="body_entered" from="EnemyWeapon" to="." method="_on_EnemyWeapon_body_entered"]
